--- a/demo.html
+++ b/demo.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <title>JS piano demo</title>
     <link href="piano.css" rel="stylesheet"/>
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="jquery.piano.js"></script>
     <script>
         $(document).ready(function() {
